fix select collapse animate

--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -171,7 +171,7 @@ $btn-border-radius-sm: 0;
 $btn-box-shadow: none;
 $btn-focus-box-shadow: none;
 $btn-active-box-shadow: none;
-$btn-white-space: nowrap;
+$btn-white-space: null;
 
 $breadcrumb-font-size: null !default;
 $breadcrumb-padding-y: 0.75rem !default;
