--- a/src/scss/utils/_transition.scss
+++ b/src/scss/utils/_transition.scss
@@ -4,7 +4,7 @@
   }
 
   &--collapsing {
-    position: relative;
+    // position: relative;
     display: block;
     height: 0;
     overflow: hidden;
